Fixed issue with motion gen controls display on mobile
Revert back to  esp32 3.0.4 due to issue with async-tcp on mobile

--- a/ESP32/dataEdit/www/style.css
+++ b/ESP32/dataEdit/www/style.css
@@ -40,15 +40,15 @@ body {
   display: none !important;
 }
 .max-height-transition {
-  max-height: 100vh;
+  max-height: 100%;
   transition: max-height 0.25s ease-in-out;
   visibility: visible;
 }
-.max-height-transition * {
-  max-height: 100vh;
+/* .max-height-transition * {
+  max-height: 100%;
   transition: max-height 0.15s ease-in-out;
   visibility: visible;
-}
+} */
 .hidden-transition {
   /* -webkit-transition: max-height 0.25s; 
   -moz-transition: max-height 0.25s; 
